Landscape view: fix overflow for search form in Epiphany (likely Safari and other AppleWebKit-based too).
git-svn-id: svn://pmwiki.org/pmwiki@3248 524c5546-5005-0410-9a3e-e25e191bd360

--- a/trunk/pub/skins/pmwiki-responsive/skin.css
+++ b/trunk/pub/skins/pmwiki-responsive/skin.css
@@ -349,6 +349,7 @@ td.middle, th.middle { vertical-align: middle;}
     width: auto;
     max-width: auto;
     line-height: inherit;
+    overflow: hidden;
   }
   #wikilogo {
     display: inline-block;
